# CPP

homework/project1/: calculator  fun.h  function.c  main.c
homework/project2/: VecMulti.java  main  main.c
week01/lab/: hello
week01/lab/cpp/: cout  cout.cpp  helloworld  helloworld.cpp  helloworld2
week01/lab/exercise/6_1/: 6_1  6_1.cpp
week01/lab/exercise/6_2/: add.cpp  add.h  main  main.cpp
week02/examples/: size
week02/lab/: 2_1.cpp  2_2.cpp  2_3.cpp  2_4.cpp  2_5.cpp
week03/lab/: 3_3.cpp  3_4.cpp  3_5.cpp
week03/lab/3_2/: factorial.cpp  main  main.cpp  printhello.cpp
week04/lab/: Makefile  cin_cout.cpp  cin_get.cpp  cin_getline.cpp  gets_puts.c  scanf_printf.c  string_input.cpp  testfiles
week04/lab/exercises/: 4_1.cpp  4_2.c  4_3.cpp
week04/lab/exercises/fib/: Makefile  fib  fib.cpp  main.cpp
week05/lab/: CMakeCache.txt  CMakeLists.txt  Hello  Makefile  cmake_install.cmake
week05/lab/CMakeDemo1/: CMakeLists.txt
week05/lab/CMakeDemo2/: CMakeLists.txt
week05/lab/CMakeDemo3/: CMakeLists.txt
week05/lab/exercises/: 5_1.c  5_2.cpp
week06/lab/exercises/: 6_1.cpp
week06/lab/static_lib/: main.cpp  mymath.cpp  mymath.h
week06/lab/static_lib/static_cmake/: CMakeLists.txt  main.cpp
week06/lab/static_lib/static_cmake/lib/: CMakeLists.txt  function.cpp
week08/lab/: fun.hpp  function.cpp  main.cpp
week09/lab/box/: box.cpp  box.h
week09/lab/complex/: complex.cpp  complex.h
week09/lab/const_mem/: complex.h  myclass.cpp  person.cpp
week09/lab/static_mem/: static_variable.cpp  static_variable.h  static_variable.h.gch
(+41 files in other folders)
